--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Pink Guy can also fire a pink laser from his ass, as seen in the battle against 
             </div>
           </div>
         </div>
-        <div id="papa-franku">
+<!--         <div id="papa-franku">
           <img src="./img/ff.jpg" alt="">
         </div>
         <iframe src="https://cs1-72v4.vkuseraudio.net/p3/decdf52c30fa06.mp3?extra=W0Rz8vbHQGPAl51YMemS2Qmrp74G1Y1p-WUj_W1Ej9KFyE-Hq7p341s9_DcoSKKD9Ac35rr1ws9Zuw1rE-lHz3szxytqwFdLkcWu5RXW6SK9KVHLGbylOSgh4_nf5Ws2wX5I0f1PQwLbMBfjIAVPmuzj" allow="autoplay" style="display:none" id="iframeAudio">
@@ -103,7 +103,7 @@ Pink Guy can also fire a pink laser from his ass, as seen in the battle against 
         	<source src="https://cs1-72v4.vkuseraudio.net/p3/decdf52c30fa06.mp3?extra=W0Rz8vbHQGPAl51YMemS2Qmrp74G1Y1p-WUj_W1Ej9KFyE-Hq7p341s9_DcoSKKD9Ac35rr1ws9Zuw1rE-lHz3szxytqwFdLkcWu5RXW6SK9KVHLGbylOSgh4_nf5Ws2wX5I0f1PQwLbMBfjIAVPmuzj" type="audio/mpeg">
           Your browser does not support the audio element
         </audio>
-      </div>
+      </div> -->
     </body>
   </html>
 
